2013-02-15  Rob Savoye  <rob@welcomehome.org>

	* config/adb.exp: Remove the test case after executing
	it. Otherwise we can fill up all the diskspace on a small target
	pretty fast.

2013-02-11  Rob Savoye	<rob@welcomehome.org>

	* baseboards/androideabi.exp: Board support for Android using ADB.
	* config/adb.exp: Config support for Android using ADB.
	* Makefile.am (dist): Add new config and board files.
	* aclocal.m4, Makefile.in, configure, example/calc/configure,
	example/mathhelper/configure: Regenerated with newer autotools.

2012-12-05  Ben Elliston  <bje@gnu.org>

	* example/hello: Remove.
	* configure.ac: Likewise.
	* configure: Regenerate.

2012-10-04  Steve Ellcey  <sellcey@mips.com>

	* Makefile.am (baseboard_SCRIPTS): Add new baseboards.
	* Makefile.in: Regenerate.
	* baseboards/mips-sim-mti32.exp: New.
	* baseboards/mips-sim-mti64.exp: New.
	* baseboards/mips-sim-mti64_n32.exp: New.
	* baseboards/mips-sim-mti64_64.exp: New.
	* baseboards/mips-sim-sde32.exp: New.
	* baseboards/mips-sim-sde64.exp: New.

2012-10-04  Ben Elliston  <bje@gnu.org>

	* aclocal.m4: Regenerate with automake 1.11.3.
	* Makefile.in: Likewise.
	* configure: Regenerate with autoconf 2.68.

2012-08-22  Steve Ellcey  <sellcey@mips.com>

	* baseboards/generic-sim.exp: New baseboard definition.

2012-06-15  Andreas Schwab  <schwab@linux-m68k.org>

	* lib/framework.exp (clone_output): Protect from leading dash in
	$message.
	* runtest.exp (verbose): Likewise.

2012-06-11  Tom Tromey  <tromey@redhat.com>

	* doc/runtest.1: Update.
	* runtest.exp (xml_file_name): New global.
	(usage): Update.
	Handle optional argument to --xml.
	* lib/framework.exp (open_logs): Respect xml_file_name.

2012-03-24  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* runtest.exp (load_tool_init): Fix typo in -de option handling.

2012-03-24  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/runtest.1: Correct name of debug file.

2012-02-25  Ben Elliston  <bje@gnu.org>
